tests/ui/parser/issues/issue-63116.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-63116.rs:3:18
   |
LL | impl W <s(f;Y(;]
   |          -       ^
   |          |
   |          unclosed delimiter

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `;`
  --> $DIR/issue-63116.rs:3:12
   |
LL | impl W <s(f;Y(;]
   |            ^ expected one of 7 possible tokens

error: mismatched closing delimiter: `]`
  --> $DIR/issue-63116.rs:3:14
   |
LL | impl W <s(f;Y(;]
   |              ^ ^ mismatched closing delimiter
   |              |
   |              unclosed delimiter

error: aborting due to 3 previous errors

