tests/ui/parser/issues/issue-63116.rs
// fixed by #66361
// error-pattern: aborting due to 2 previous errors
impl W <s(f;Y(;]
